# noise-gate

./: .rustfmt.toml  Cargo.toml
benches/: throughput.rs
examples/: wav-splitter.rs
src/: lib.rs
