[package]
name = "noise-gate"
version = "0.1.2"
authors = ["Michael Bryan <michaelfbryan@gmail.com>", "David Jensenius <david@jensenius.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A basic Noise Gate for recording bursts of sound above a specified threshold."
repository = "https://github.com/Michael-F-Bryan/noise-gate"
documentation = "https://docs.rs/noise-gate"
categories = ["multimedia", "multimedia::audio"]
keywords = ["audio-processing", "noise-gate"]
exclude = ["data/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dasp = "0.11"
dasp_sample = "0.11"

[dev-dependencies]
hound = "3.4.0"
criterion = "0.3"
structopt = "0.3.20"

[[bench]]
name = "throughput"
harness = false
